<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeDrawer"
            android:icon="@drawable/home"
            android:title="Home" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/stanze"
            android:icon="@drawable/infomuseo"
            android:title="@string/stanze" />
        <item
            android:id="@+id/qr_main"
            android:title="Trova stanza"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_qr_code"/>
        <item
            android:id="@+id/sito"
            android:icon="@drawable/sito"
            android:title="@string/sito" />

    </group>
    <group
        android:id="@+id/basso"
        android:checkableBehavior="single">
        <item
            android:id="@+id/Itemcrediti"
            android:icon="@drawable/crediti"
            android:title="@string/crediti" />
        <item
            android:id="@+id/impostazioni"
            android:icon="@drawable/impostazioni"
            android:title="@string/impostazioni" />

    </group>

</menu>
